*Edge*

* Recognizes 410 as Resource Gone. #2316 [Jordan Brough, Jatinder Singh]

* More thorough SSL support.  #2370 [Roy Nicholson]

* HTTP proxy support.  #2133 [Marshall Huss, Sébastien Dabet]


*2.3.2 [Final] (March 15, 2009)*

* Nothing new, just included in 2.3.2


*2.2.1 [RC2] (November 14th, 2008)*

* Fixed that ActiveResource#post would post an empty string when it shouldn't be posting anything #525 [Paolo Angelini]


*2.2.0 [RC1] (October 24th, 2008)*

* Add ActiveResource::Base#to_xml and ActiveResource::Base#to_json. #1011 [Rasik Pandey, Cody Fauser]

* Add ActiveResource::Base.find(:last). [#754 state:resolved] (Adrian Mugnolo)

* Fixed problems with the logger used if the logging string included %'s [#840 state:resolved] (Jamis Buck)

* Fixed Base#exists? to check status code as integer [#299 state:resolved] (Wes Oldenbeuving)


*2.1.0 (May 31st, 2008)*

* Fixed response logging to use length instead of the entire thing (seangeo) [#27]

* Fixed that to_param should be used and honored instead of hardcoding the id #11406 [gspiers]

* Improve documentation. [Ryan Bigg, Jan De Poorter, Cheah Chu Yeow, Xavier Shay, Jack Danger Canty, Emilio Tagua, Xavier Noria,  Sunny Ripert]

* Use HEAD instead of GET in exists? [bscofield]

* Fix small documentation typo.  Closes #10670 [Luca Guidi]

* find_or_create_resource_for handles module nesting.  #10646 [xavier]

* Allow setting ActiveResource::Base#format before #site.  [Rick Olson]

* Support agnostic formats when calling custom methods.  Closes #10635 [joerichsen]

* Document custom methods.  #10589 [Cheah Chu Yeow]

* Ruby 1.9 compatibility.  [Jeremy Kemper]


*2.0.2* (December 16th, 2007)

* Added more specific exceptions for 400, 401, and 403 (all descending from ClientError so existing rescues will work) #10326 [trek]

* Correct empty response handling.  #10445 [seangeo]


*2.0.1* (December 7th, 2007)

* Don't cache net/http object so that ActiveResource is more thread-safe.  Closes #10142 [kou]
